<resources>
    <string name="app_name">BookNerd</string>
    <string name="hello_world">Hello World!</string>
    <string name="full_name">Full Name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="create_a_new_acccount">Create a new acccount!</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in!</string>
    <string name="sign_out">Sign Out</string>
    <string name="owned_books">Owned Books</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author Name</string>
    <string name="add_book">Add a book</string>
    <string name="todo">TODO</string>
    <string name="user_profile">User Profile</string>
    <string name="send">Send</string>
    <string name="message">message...</string>
</resources>
